--- a/index.html
+++ b/index.html
@@ -1,28 +1,33 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Flatiron Task Lister</title>
-  <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-  <div id="main-content">
-    <h1>Task Lister Lite™️</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Task Lister</title>
+  </head>
+  <body>
+    <h1>Task Lister</h1>
 
-    <form id="create-task-form" action="" method="POST">
+    <form id="create-task-form" action="#" method="POST">
       <label for="new-task-description">Task description:</label>
-      <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
-      <input type="submit" value="Create New Task">
+      <input
+        type="text"
+        id="new-task-description"
+        name="new-task-description"
+        placeholder="description"
+      />
+
+      <label for="priority">Priority:</label>
+      <select id="priority" name="priority">
+        <option value="low">Low</option>
+        <option value="medium">Medium</option>
+        <option value="high">High</option>
+      </select>
+
+      <input type="submit" value="Create New Task" />
     </form>
 
-    <div id="list">
-      <h2>My Todos:</h2>
-      <ul id="tasks">
-      </ul>
-    </div>
+    <ul id="tasks"></ul>
 
     <script src="./src/index.js"></script>
-  </div>
-
-</body>
+  </body>
 </html>
